--- a/Home Page/main.html
+++ b/Home Page/main.html
@@ -98,11 +98,11 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis libero erat. Integer ac purus est. Proin erat mi, pulvinar ut magna eget, consectetur auctor turpis.</p>
                     <div class="content">
                         <p>
-                            <button class="button button_secondary" ><i class="button-icon icon-heart"></i>Me Likey</button>
+                            <button class="buttonincr button_secondary" ><i class="button-icon icon-heart"></i>Me Likey</button>
                             <input class="likesCounter" type="text" value="0" />
                         </p>
                         <p>
-                            <button class="button">Delete</button>        
+                            <button class="buttondelete">Delete</button>        
                         </p>
                     </div>
                 </div>
