--- a/Home Page/main.html
+++ b/Home Page/main.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="navstyles.css">
     <link rel="stylesheet" href="styles.css">
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'> 
@@ -15,6 +19,14 @@
     </header>
         
     <div id="top"></div>
+    <div id='cssmenu'>
+        <ul>
+            <li class='active'><a href='#'><span>Nature</span></a></li>
+            <li><a href='#'><span>Humans</span></a></li>
+            <li><a href='#'><span>Urban</span></a></li>
+            <li class='last'><a href='#'><span>Buildings</span></a></li>
+        </ul>
+    </div>
     <section class="gallery">
         <div class="row">
             <ul>
@@ -114,4 +126,4 @@
     </section> <!-- / projects -->
     <script type="text/javascript" src="action.js"></script>
 </body>
-
+</html>
